// Vitest Snapshot v1

exports[`<Flipnote /> > should flip after click 1`] = `
<div>
  <div
    class="flip-card css-1nx0mta"
    data-testid="flipnote-container"
  >
    <div
      class="flip-card-inner  css-xcat2f"
    >
      <div
        class="flip-card-front css-2n4rnq"
        data-testid="flipnote-front"
      >
        <div
          class="css-1yua5i9"
        >
          <p
            class="chakra-text css-aq7y69"
          >
            <b>
              test title
            </b>
          </p>
        </div>
      </div>
      <div
        class="flip-card-back css-2n4rnq"
        data-testid="flipnote-back"
      >
        <div
          class="css-1yua5i9"
        >
          <p
            class="chakra-text css-aq7y69"
          >
            test content
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Flipnote /> > should flip after click 2`] = `
<div>
  <div
    class="flip-card css-1nx0mta"
    data-testid="flipnote-container"
  >
    <div
      class="flip-card-inner flip-card-inner-rotate css-xcat2f"
    >
      <div
        class="flip-card-front css-2n4rnq"
        data-testid="flipnote-front"
      >
        <div
          class="css-1yua5i9"
        >
          <p
            class="chakra-text css-aq7y69"
          >
            <b>
              test title
            </b>
          </p>
        </div>
      </div>
      <div
        class="flip-card-back css-2n4rnq"
        data-testid="flipnote-back"
      >
        <div
          class="css-1yua5i9"
        >
          <p
            class="chakra-text css-aq7y69"
          >
            test content
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
